force-app/main/default/objects/Deployment_Settings__c/fields/isEnabled__c.field-meta.xml
<CustomField>
    <fullName>isEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEnabled</label>
    <type>Checkbox</type>
</CustomField>